SERVER-36978 TaskRunner must ensure Client is initialized for thread before running tasks

(cherry picked from commit fb4e163ff4a8ce5057b66b24f41f1bf193e2058c)